--- a/client/src/css/pages/schedule.scss
+++ b/client/src/css/pages/schedule.scss
@@ -75,7 +75,7 @@
         box-sizing: border-box;
         margin: 15px auto;
         padding: 0px 7px;
-        width: 600px;
+        max-width: 600px;
 
         .card {
             display: block;
