--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -18,3 +18,15 @@ main {
     box-sizing: border-box;
     padding: 15px;
 }
+
+h3 {
+    text-transform: uppercase;
+    font-size: 28px;
+    color: #5f5f5f;
+    margin: 15px;
+    text-align: center;
+    font-weight: normal;
+}
+
+//Load last to override everything else when it needs too
+@import './mobile.scss';
