--- a/client/src/css/pages/schedule.scss
+++ b/client/src/css/pages/schedule.scss
@@ -17,6 +17,14 @@
         }
     }
 
+    .print-button {
+        float: none;
+        margin: 15px auto;
+        text-align: center;
+        max-width: 220px;
+        background-color: white;
+    }
+
     .schedule-nav {
         width: 100%;
         border-collapse: collapse;
