Styled print page

--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -6,6 +6,8 @@
 @import './pages/manage.scss';
 @import './pages/schedule.scss';
 
+@import './pages/printpage.scss';
+
 body {
     font-family: 'Open Sans', Arial, sans-serif;
     background-color: whitesmoke;
