--- a/client/src/css/pages/printpage.scss
+++ b/client/src/css/pages/printpage.scss
@@ -77,7 +77,7 @@
 
 @media print {
     .no-print {
-        display: none;
+        display: none !important;
     }
     .ui-card {
         box-shadow: 0 0 0 0 !important;
