Change day headers to 1-10

--- a/client/src/css/pages/manage/class-editor.scss
+++ b/client/src/css/pages/manage/class-editor.scss
@@ -62,6 +62,10 @@
             }
         }
 
+        .timetable-header-box {
+            width: 60px;
+        }
+
         .timetable-slot {
             height: 25px;
             cursor: pointer;
