Allow printing of days other than today

--- a/client/src/css/pages/printpage.scss
+++ b/client/src/css/pages/printpage.scss
@@ -83,5 +83,6 @@
         box-shadow: 0 0 0 0 !important;
         border-radius: 0 !important;
         border-bottom: 2px dashed rgb(124, 124, 124);
+        page-break-inside: avoid;
     }
 }
