--- a/client/src/css/pages/printpage.scss
+++ b/client/src/css/pages/printpage.scss
@@ -34,7 +34,7 @@
             text-align: center;
             width: 50%;
             margin: 0;
-            float: left;
+            //float: left;
             font-weight: bold;
             .code {
                 font-size: 14px;
@@ -49,7 +49,7 @@
             //margin-left: 100px;
             display: inline-block;
             box-sizing: border-box;
-            float: right;
+            //float: right;
             text-align: center;
             width: 50%;
             margin: 0;
@@ -71,6 +71,26 @@
         font-size: 14px;
         cursor: pointer;
         background-color: white;
+    }
+
+    .print-header {
+        overflow: hidden;
+        max-width: 600px;
+        margin: 0 auto;
+
+        h1 {
+            display: inline-block;
+            margin: 0;
+            padding: 10px;
+            width: 50%;
+            box-sizing: border-box;
+            font-size: 28pt;
+        }
+
+        .print-header-day {
+            text-align: right;
+            font-weight: normal;
+        }
     }
 }
 
